--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Хедер -->
-    <header class="header">
+    <!-- <header class="header">
       <div class="container flex">
         <div>
           <nav class="main-nav">
@@ -57,7 +57,7 @@
           </ul>
         </div>
       </div>
-    </header>
+    </header> -->
 
     <main>
       <section class="works-examples section">
@@ -65,7 +65,7 @@
           <h1 class="visually-hidden">Примеры работ</h1>
           <!-- Фильтры -->
           <div class="filters">
-            <ul class="filters-list list flex">
+            <ul class="filters-list list">
               <li><button class="button">Все</button></li>
               <li><button class="button">Веб-сайты</button></li>
               <li><button class="button">Приложения</button></li>
