--- a/index.html
+++ b/index.html
@@ -155,7 +155,8 @@
             <li class="work-item">
               <img
                 class="photo"
-                src="./img/img1.png"
+                src="./img/works/desktop/code.jpg"
+                srcset="./img/works/desktop/code@2x.jpg 2x"
                 width="370"
                 height="294"
                 alt="Десктопные приложения"
@@ -165,7 +166,8 @@
             <li class="work-item">
               <img
                 class="photo"
-                src="./img/img2.png"
+                src="./img/works/desktop/mobile.jpg"
+                srcset="./img/works/desktop/mobile@2x.jpg 2x"
                 width="370"
                 height="294"
                 alt="Мобильные приложения"
@@ -175,7 +177,8 @@
             <li class="work-item">
               <img
                 class="photo"
-                src="./img/img3.png"
+                src="./img/works/desktop/grafic.jpg"
+                srcset="./img/works/desktop/grafic@2x.jpg 2x"
                 width="370"
                 height="294"
                 alt="Дизайнерские решения"
@@ -192,13 +195,37 @@
           <h2 class="section-title">Наша команда</h2>
           <ul class="team-list list flex">
             <li class="team-member">
-              <img
-                class="photo"
-                src="./img/photo1.jpg"
-                width="270"
-                height="260"
-                alt="Игорь Демьяненко"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/comand/desktop/igor-270.jpg    1x,
+                    ./img/comand/desktop/igor-270-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/tablet/igor-354.jpg    1x,
+                    ./img/comand/tablet/igor-354-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/mob/igor-480.jpg    1x,
+                    ./img/comand/mob/igor-480-2x.jpg 2x
+                  "
+                  media="(man-width: 767px)"
+                />
+                <img
+                  class="photo"
+                  src="./img/comand/desktop/igor-270.jpg"
+                  width="270"
+                  height="260"
+                  alt="Игорь Демьяненко"
+                />
+              </picture>
+
               <h3 class="name">Игорь Демьяненко</h3>
               <p class="position" lang="en">Product Designer</p>
               <ul class="social-list list flex">
@@ -257,13 +284,37 @@
               </ul>
             </li>
             <li class="team-member">
-              <img
-                class="photo"
-                src="./img/photo2.jpg"
-                width="270"
-                height="260"
-                alt="Ольга Репина"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/comand/desktop/olga-270.jpg    1x,
+                    ./img/comand/desktop/olga-270-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/tablet/olga-354.jpg    1x,
+                    ./img/comand/tablet/olga-354-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/mob/olga-480.jpg    1x,
+                    ./img/comand/mob/olga-480-2x.jpg 2x
+                  "
+                  media="(man-width: 767px)"
+                />
+                <img
+                  class="photo"
+                  src="./img/comand/desktop/olga-270.jpg"
+                  width="270"
+                  height="260"
+                  alt="Ольга Репина"
+                />
+              </picture>
+
               <h3 class="name">Ольга Репина</h3>
               <p class="position" lang="en">Frontend Developer</p>
               <ul class="social-list list flex">
@@ -322,13 +373,36 @@
               </ul>
             </li>
             <li class="team-member">
-              <img
-                class="photo"
-                src="./img/photo3.jpg"
-                width="270"
-                height="260"
-                alt="Николай Тарасов"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/comand/desktop/nikolay-270.jpg    1x,
+                    ./img/comand/desktop/nikolay-270-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/tablet/nikolay-354.jpg    1x,
+                    ./img/comand/tablet/nikolay-354-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/mob/nikolay-480.jpg    1x,
+                    ./img/comand/mob/nikolay-480-2x.jpg 2x
+                  "
+                  media="(man-width: 767px)"
+                />
+                <img
+                  class="photo"
+                  src="./img/comand/desktop/nikolay-270.jpg"
+                  width="270"
+                  height="260"
+                  alt="Николай Тарасов"
+                />
+              </picture>
               <h3 class="name">Николай Тарасов</h3>
               <p class="position" lang="en">Marketing</p>
               <ul class="social-list list flex">
@@ -387,13 +461,36 @@
               </ul>
             </li>
             <li class="team-member">
-              <img
-                class="photo"
-                src="./img/photo4.jpg"
-                width="270"
-                height="260"
-                alt="Михаил Ермаков"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./img/comand/desktop/mihail-270.jpg    1x,
+                    ./img/comand/desktop/mihail-270-2x.jpg 2x
+                  "
+                  media="(min-width: 1200px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/tablet/mihail-354.jpg    1x,
+                    ./img/comand/tablet/mihail-354-2x.jpg 2x
+                  "
+                  media="(min-width: 768px)"
+                />
+                <source
+                  srcset="
+                    ./img/comand/mob/mihail-480.jpg    1x,
+                    ./img/comand/mob/mihail-480-2x.jpg 2x
+                  "
+                  media="(man-width: 767px)"
+                />
+                <img
+                  class="photo"
+                  src="./img/comand/desktop/mihail-270.jpg"
+                  width="270"
+                  height="260"
+                  alt="Михаил Ермаков"
+                />
+              </picture>
               <h3 class="name">Михаил Ермаков</h3>
               <p class="position" lang="en">UI Designer</p>
               <ul class="social-list list flex">
