--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!-- Хедер -->
 
-    <!-- <header class="header">
+    <header class="header">
       <div class="container">
         <div class="mobile-menu">
           <span class="logo"> <span class="logo-blue">Web</span>Studio</span>
@@ -77,7 +77,7 @@
           </div>
         </div>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <!-- Герой -->
