--- a/portfolio.html
+++ b/portfolio.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <!-- Хедер -->
-    <!-- <header class="header">
+    <header class="header">
       <div class="container flex">
         <div>
           <nav class="main-nav">
@@ -57,7 +57,7 @@
           </ul>
         </div>
       </div>
-    </header> -->
+    </header>
 
     <main>
       <section class="works-examples section">
