исправила ошибки от ментора

--- a/portfolio.html
+++ b/portfolio.html
@@ -512,80 +512,82 @@
     <!-- Футер -->
     <footer class="footer">
       <div class="container footer-container">
-        <div class="footer-adress">
-          <p class="logo"><span class="logo-blue">Web</span>Studio</p>
-          <address class="adress">
-            <ul class="adress-list list" id="contacts">
-              <li class="adress-item">г. Киев, пр-т Леси Украинки, 26</li>
-              <li class="adress-item">
-                <a class="adress-link" href="mailto:info@devstudio.com"
-                  >info@devstudio.com</a
+        <div class="adress-social-wrap">
+          <div class="footer-adress">
+            <p class="logo"><span class="logo-blue">Web</span>Studio</p>
+            <address class="adress">
+              <ul class="adress-list list" id="contacts">
+                <li class="adress-item">г. Киев, пр-т Леси Украинки, 26</li>
+                <li class="adress-item">
+                  <a class="adress-link" href="mailto:info@devstudio.com"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="adress-item">
+                  <a class="adress-link" href="tel:+380961111111"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+          <div class="social-list-wrap">
+            <p class="social-title">присоединяйтесь</p>
+            <ul class="social-list list flex">
+              <li>
+                <a
+                  href="https://www.instagram.com/"
+                  class="social link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Instagram link"
                 >
+                  <svg class="social-icon">
+                    <use href="./img/icons/sprite.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="adress-item">
-                <a class="adress-link" href="tel:+380961111111"
-                  >+38 096 111 11 11</a
+              <li>
+                <a
+                  href="https://twitter.com/"
+                  class="social link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Twitter link"
                 >
+                  <svg class="social-icon">
+                    <use href="./img/icons/sprite.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.facebook.com/"
+                  class="social link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="Facebook link"
+                >
+                  <svg class="social-icon">
+                    <use href="./img/icons/sprite.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.linkedin.com/"
+                  class="social link"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  aria-label="linkedin link"
+                >
+                  <svg class="social-icon">
+                    <use href="./img/icons/sprite.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-        <div class="social-list-wrap">
-          <p class="social-title">присоединяйтесь</p>
-          <ul class="social-list list flex">
-            <li>
-              <a
-                href="https://www.instagram.com/"
-                class="social link"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Instagram link"
-              >
-                <svg class="social-icon">
-                  <use href="./img/icons/sprite.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://twitter.com/"
-                class="social link"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Twitter link"
-              >
-                <svg class="social-icon">
-                  <use href="./img/icons/sprite.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.facebook.com/"
-                class="social link"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="Facebook link"
-              >
-                <svg class="social-icon">
-                  <use href="./img/icons/sprite.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.linkedin.com/"
-                class="social link"
-                target="_blank"
-                rel="noopener noreferrer"
-                aria-label="linkedin link"
-              >
-                <svg class="social-icon">
-                  <use href="./img/icons/sprite.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
         <div class="submit-container">
           <p class="social-title">Подпишитесь на рассылку</p>
