--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           <div class="contacts">
             <ul class="contacts-list list">
               <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">
+                <a class="link mail" href="mailto:info@devstudio.com">
                   <svg class="mail-icon" width="12">
                     <use href="./img/icons/sprite.svg#icon-contacts-mail"></use>
                   </svg>
